# Conditional-Tasks

./: CLAUDE.md  Cargo.toml  dfx.json
.github/workflows/: ci.yml
canister/: Cargo.toml  build.rs  conditional-tasks.did
canister/examples/: participant.rs
canister/src/: api.rs  auth.rs  certify.rs  lib.rs  sign.rs  weight.rs
canister/tests/: g2.rs  g3.rs  g4.rs
canister/tests/common/: mod.rs
canister/tests/mock-index/: Cargo.toml
canister/tests/mock-index/src/: lib.rs
config/: mainnet.toml  testnet.toml
docs/: build-plan.md  game-spec.md  post-game.md  standards.md
e2e/solana-driver/: Cargo.toml
e2e/solana-driver/src/: main.rs
logic/: Cargo.toml
logic/src/: lib.rs  task.rs  verdict.rs  vote.rs
scripts/: e2e-devnet.sh  e2e-testnets.sh  lint-boundaries.sh  test-canister.sh
